<package format="2">
  <name>slam_gmapping</name>
  <version>1.3.10</version>
  <description>slam_gmapping contains a wrapper around gmapping which provides SLAM capabilities.</description>
  <author>Brian Gerkey</author>
  <maintainer email="hunter@openrobotics.org">Hunter L. Allen</maintainer>
  <license>CreativeCommons-by-nc-sa-2.0</license>

  <url>http://ros.org/wiki/slam_gmapping</url>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <exec_depend>openslam_gmapping</exec_depend>
  <exec_depend>gmapping</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <metapackage/>
  </export>
</package>
